[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OncheDatabase"
version = "0.4.0"
description = "A Python package for managing databases with custom logging and utilities."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["database", "mysql", "logger", "management"]
license = { text = "MIT" }

authors = [{name = "Recitasse"}]

urls = { "Homepage" = "https://github.com/Recitasse/OncheDatabase" }

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License"
]

dependencies = [
    "mysql-connector==2.2.9",
]

[project.optional-dependencies]
dev = [
    "isort"
]

[tool.setuptools]
package-dir = {"" = "OncheDatabase"}
packages = ["OncheDatabase"]
include-package-data = true

[tool.setuptools.package-data]
"OncheDatabase" = [
    "data/inputs/*",
    "data/outputs/*",
    "data/reports/*"
]