[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "OncheDatabase"
version = "0.4.0"
dependencies = [
  "mysql-connector==2.2.9"
]
requires-python = ">=3.12"
authors = [
  {name = "Recitasse"}
]
maintainers = [
  {name = "Recitasse"}
]
description = "Lovely Spam! Wonderful Spam!"
readme = "README.md"
#license = {file = "LICENSE.txt"}
keywords = ["database", "mysql", "onche"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
tools = ["isort"]

[project.urls]
Homepage = "https://github.com/Recitasse/OncheDatabase"
